# hsqc

./: .travis.yml  README.md  USAGE.txt  h2o.xyz  hsqc.cabal
basis/: STO-3G.json
src/: BasisFunction.hs  BasisSets.hs  Element.hs  Gaussian.hs  Geometry.hs  HartreeFock.hs  Integrals.hs  Main.hs  Matrix.hs  Orbitals.hs  Point3D.hs  STO3G.hs  Shell.hs  XYZParser.hs
xyz/: benzene.xyz  h2.xyz  h2o-2nd.xyz  h2o.xyz  heh.xyz  hf.xyz  nh3.xyz  test.xyz  urea.xyz
