name:                hsqc
version:             0.1.2.0

description:         Hartree Fock SCF program in Haskell, using Repa
license:             GPL-3
license-file:        LICENSE
author:              Peter Spackman
maintainer:          peterspackman@fastmail.com
copyright:           (c) 2015 Peter Spackman
category:            Scientific Computing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.24

executable hsqc
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:
    -rtsopts
    -funbox-strict-fields
    -fsimpl-tick-factor=500
    -threaded
  build-depends:       base >=4.8,
                       split >= 0.2.3.1,
                       random >= 1.1,
                       text >= 1.2.2.0,
                       hmatrix >=0.17.0.0,
                       hmatrix-gsl >=0.17.0.0,
                       hmatrix-special >=0.4.0.0,
                       mtl >= 2.2.1,
                       bytestring >= 0.10.8.0,
                       attoparsec >= 0.13.0.0,
                       repa >= 3.4.0.0,
                       repa-algorithms >= 3.4.0.0,
                       vector >= 0.11.0.0,
                       docopt >= 0.7.0.0,
                       aeson >= 0.11.2.0,
                       containers >= 0.5.0.0

  hs-source-dirs:      src
  default-language:    Haskell2010
